// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders Form correctly 1`] = `
<form
  className="form form myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;

exports[`Form renders Form with FormGroup correctly 1`] = `
<Form
  className="myClass"
  dataLabel="SomeForm"
  onSubmit={[MockFunction]}
  style={
    Object {
      "width": "50px",
    }
  }
>
  <form
    className="form form myClass"
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <FormGroup
      className="myClass"
      horizontal={true}
      key="0"
      style={
        Object {
          "width": "50px",
        }
      }
    >
      <div
        className="formgroup-component formGroup container horizontal myClass"
        style={
          Object {
            "width": "50px",
          }
        }
      />
    </FormGroup>
  </form>
</Form>
`;

exports[`Form renders FormGroup correctly 1`] = `
<div
  className="formgroup-component formGroup container horizontal myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;
